# xtools-historic

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile.am  README.md  cattle.c  configure.ac  xemu.c
lib/: Makefile.am  fgets.c  file.c  fputc.c  fputs.c  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  main.c  makeargv.c  oscall.c  pad.c  printf.c  puts.c  reverse.c  scanf.c  sign.c  startup.asm  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strrchr.c  tolower.c  toupper.c
pso/: Makefile.am  alu.cpp  alu.hpp  context.cpp  context.hpp  cpu.cpp  cpu.hpp  disk.cpp  disk.hpp  file.cpp  file.hpp  kernel.cpp  kernel.hpp  main.cpp  mmu.cpp  mmu.hpp  opcodes.hpp  pcb.cpp  pcb.hpp  system.hpp
source/: Makefile.am  getversion.c.in  ostest.c  xar.h  xar1.c  xar2.c  xasm.h  xasm1.c  xasm2.c  xasm3.c  xcc.h  xcc1.c  xcc2.c  xcc3.c  xlnk.h  xlnk1.c  xlnk2.c
